# mcp-registry

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.json  pyproject.toml  registry.json  registry_tobe.json
.github/workflows/: validate.yml
mcps/atlassian/rovo/: server.json
mcps/example/hello-world/: server.json
mcps/sonarqube/: server.json
schemas/: config.schema.json  registry.schema.json
scripts/: adder.py  compiler.py  fetch_all_servers.py  fetcher.py  registry.py  validator.py
tests/: test_adder.py  test_compiler.py  test_fetcher.py  test_validator.py
